--- a/src/main/resources/CSS/checkout.css
+++ b/src/main/resources/CSS/checkout.css
@@ -279,3 +279,27 @@
     -fx-pref-height: 0;
     -fx-pref-width: 0;
 }
+
+/*TextField*/
+.filter-tf {
+    -fx-pref-height: 34px;
+    -fx-background-color: white;
+    -fx-background-radius: 10;
+    -fx-border-color: transparent;
+    -fx-padding: 0 10 0 10;
+    -fx-font-size: 13px;
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.05), 3,0,0,1);
+}
+
+
+.filter-tf:hover {
+    -fx-background-color: #f2eadf;
+}
+
+.filter-tf:focused {
+    -fx-background-color: #fff;
+    -fx-border-color: #d2a679;
+    -fx-border-width: 1.2;
+    -fx-border-radius: 10;
+    -fx-effect: dropshadow(gaussian, rgba(210,166,121,0.3), 4,0,0,1);
+}
