--- a/src/main/resources/CSS/BanGiaoCa.css
+++ b/src/main/resources/CSS/BanGiaoCa.css
@@ -45,7 +45,7 @@
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.08), 4, 0, 0, 1);
 }
 .right-sidebar {
-    -fx-background-color: #ffd1b5;
+    -fx-background-color: white;
     -fx-background-radius: 32 0 0 32;
     -fx-padding: 25;
     -fx-spacing: 15;
@@ -64,7 +64,7 @@
     -fx-text-fill: #333;
     -fx-alignment: center;
     -fx-padding: 15 0 10 0;
-    -fx-background-color: #ffffff;
+    -fx-background-color: #E6763E;
     -fx-background-radius: 12 12 0 0;
 }
 
