--- a/src/main/resources/FXML/KhuyenMai.fxml
+++ b/src/main/resources/FXML/KhuyenMai.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
@@ -29,24 +30,19 @@
             <padding>
                 <Insets bottom="10" left="10" right="10" top="10" />
             </padding>
-            <VBox prefHeight="816.0" prefWidth="700.0" styleClass="center_section-background">
+            <VBox prefHeight="816.0" prefWidth="700.0" style="-fx-background-color: efefef; -fx-background-radius: 20 28 20 28;">
                 <children>
+               <HBox prefHeight="55.0" prefWidth="624.0" styleClass="tt_box">
+                  <children>
+      
+                          <!-- Tiêu đề -->
+                          <Label prefHeight="53.0" prefWidth="624.0" styleClass="center-title" text="Danh sách khuyến mãi" />
+                  </children>
+               </HBox>
 
-                    <!-- Tiêu đề -->
-                    <Label prefHeight="65.0" prefWidth="700.0" styleClass="center-title" text="Danh sách khuyến mãi">
-                        <VBox.margin>
-                            <Insets bottom="5.0" />
-                        </VBox.margin></Label>
-
-                    <!-- Danh sách hóa đơn -->
-                    <ScrollPane fitToWidth="true" prefWidth="668.0" styleClass="scroll-list" VBox.vgrow="ALWAYS">
+                    <ScrollPane fitToWidth="true" prefHeight="547.0" prefWidth="612.0" styleClass="scroll-list" VBox.vgrow="ALWAYS">
                         <content>
-                            <VBox prefHeight="518.0" prefWidth="656.0" spacing="8" styleClass="vbox_center-scroll">
-                                <padding>
-                                    <Insets bottom="5" left="5" right="5" top="5" />
-                                </padding>
-
-                                <!-- Một thẻ đặt bàn -->
+                            <VBox prefHeight="524.0" prefWidth="599.0" spacing="8" styleClass="vbox_center-scroll">
                                 <HBox alignment="CENTER_LEFT" spacing="10" styleClass="order-card">
                                     <StackPane style="-fx-background-radius: 10 0 0 10; -fx-overflow: hidden;">
                                         <ImageView fitHeight="60" fitWidth="60" preserveRatio="false">
@@ -58,8 +54,8 @@
                                     <VBox spacing="2" HBox.hgrow="ALWAYS">
                                         <Label styleClass="promo-id" text="KM0001" />
                                         <HBox spacing="15">
-                                            <Label styleClass="promo-date" text="Ngày bắt đầu : 21-08-2025" />
-                                            <Label styleClass="promo-date" text="Ngày kết thúc : 12-10-2025">
+                                            <Label prefHeight="17.0" prefWidth="90.0" styleClass="promo-date" text="Ngày bắt đầu : 21-08-2025" />
+                                            <Label prefHeight="17.0" prefWidth="164.0" styleClass="promo-date" text="Ngày kết thúc : 12-10-2025">
                                     <HBox.margin>
                                        <Insets left="130.0" />
                                     </HBox.margin></Label>
@@ -103,51 +99,51 @@
                         </VBox.margin>
                     </ScrollPane>
 
-                    <!-- Bộ lọc và tìm kiếm -->
-                    <VBox spacing="8" styleClass="filter-box">
-                        <Label styleClass="filter-title" text="Bộ lọc" />
-
-                        <GridPane hgap="10" prefWidth="626.0" vgap="10">
-                            <columnConstraints>
-                                <ColumnConstraints percentWidth="20" />
-                                <ColumnConstraints percentWidth="30" />
-                                <ColumnConstraints percentWidth="20" />
-                                <ColumnConstraints percentWidth="30" />
-                            </columnConstraints>
-                            <!-- Hàng 1 -->
-                            <Label styleClass="label_filter" text="Mã bàn:" GridPane.columnIndex="0" />
-                            <TextField prefHeight="50.0" promptText="Value" GridPane.columnIndex="1" />
-
-                            <Label styleClass="label_filter" text="Thời gian:" GridPane.columnIndex="2" />
-                            <TextField prefHeight="50.0" promptText="dd/mm/yyyy" GridPane.columnIndex="3" />
-
-                            <!-- Hàng 2 -->
-                            <Label styleClass="label_filter" text="SDT:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                            <TextField prefHeight="50.0" promptText="Value" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-
-                            <Label styleClass="label_filter" text="Khu vực:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                            <ComboBox styleClass="uudai_combobox" prefHeight="50.0" promptText="-- chọn --" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                            <rowConstraints>
-                                <RowConstraints />
-                                <RowConstraints />
-                            </rowConstraints>
-                            <VBox.margin>
-                                <Insets left="10.0" />
-                            </VBox.margin>
-                        </GridPane>
-
-                        <!-- Hàng nút -->
-                        <HBox alignment="CENTER_RIGHT" spacing="10">
-                            <Button styleClass="btn-clear" text="Xóa trắng" />
-                            <Button styleClass="btn-search" text="Tìm kiếm" />
-                            <VBox.margin>
-                                <Insets top="10.0" />
-                            </VBox.margin>
-                        </HBox>
-                    </VBox>
-
                 </children>
             </VBox>
+
+              <!-- Bộ lọc và tìm kiếm -->
+              <VBox spacing="8" styleClass="filter-box">
+                  <Label prefHeight="47.0" prefWidth="594.0" styleClass="filter-title" text="Bộ lọc" />
+
+                  <GridPane hgap="10" prefWidth="626.0" vgap="10">
+                      <columnConstraints>
+                          <ColumnConstraints percentWidth="20" />
+                          <ColumnConstraints percentWidth="30" />
+                          <ColumnConstraints percentWidth="20" />
+                          <ColumnConstraints percentWidth="30" />
+                      </columnConstraints>
+                      <!-- Hàng 1 -->
+                      <Label styleClass="label_filter" text="Mã bàn:" GridPane.columnIndex="0" />
+                      <TextField prefHeight="50.0" promptText="Value" styleClass="filter-tf" GridPane.columnIndex="1" />
+
+                      <Label styleClass="label_filter" text="Thời gian:" GridPane.columnIndex="2" />
+                      <TextField prefHeight="50.0" promptText="dd/mm/yyyy" styleClass="filter-tf" GridPane.columnIndex="3" />
+
+                      <!-- Hàng 2 -->
+                      <Label styleClass="label_filter" text="SDT:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                      <TextField prefHeight="50.0" promptText="Value" styleClass="filter-tf" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+                      <Label styleClass="label_filter" text="Khu vực:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                      <ComboBox prefHeight="50.0" promptText="-- chọn --" styleClass="uudai_combobox filter-tf" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                      <rowConstraints>
+                          <RowConstraints />
+                          <RowConstraints />
+                      </rowConstraints>
+                      <VBox.margin>
+                          <Insets left="10.0" />
+                      </VBox.margin>
+                  </GridPane>
+
+                  <!-- Hàng nút -->
+                  <HBox alignment="CENTER_RIGHT" spacing="10">
+                      <Button styleClass="btn-clear" text="Xóa trắng" />
+                      <Button styleClass="btn-search" text="Tìm kiếm" />
+                      <VBox.margin>
+                          <Insets top="10.0" />
+                      </VBox.margin>
+                  </HBox>
+              </VBox>
         </VBox>
     </center>
 
@@ -159,12 +155,16 @@
             </padding>
 
             <!-- Khối trắng chính -->
-            <VBox spacing="15" styleClass="right-content">
+            <VBox prefHeight="700.0" prefWidth="396.0" spacing="15" styleClass="right-content">
                 <!-- Tiêu đề -->
-                <Label prefHeight="27.0" prefWidth="275.0" styleClass="title-right" text="Thông Tin Khuyến Mãi" />
+                <AnchorPane prefHeight="39.0" prefWidth="403.0">
+                    <children>
+                        <Label prefHeight="39.0" prefWidth="356.0" styleClass="section-title" text="Thông Tin Khuyến Mãi" />
+                    </children>
+                </AnchorPane>
 
                 <!-- Form thông tin -->
-                <GridPane hgap="10" vgap="10">
+                <GridPane hgap="10" prefHeight="311.0" prefWidth="356.0" vgap="10">
                     <columnConstraints>
                         <ColumnConstraints percentWidth="40" />
                         <ColumnConstraints percentWidth="60" />
@@ -217,7 +217,7 @@
 
                     <!-- Danh sách khuyến mãi -->
                     <ScrollPane fitToWidth="true" prefHeight="400" styleClass="food-scroll">
-                        <FlowPane fx:id="foodList" alignment="TOP_CENTER" hgap="20" prefWrapLength="400" vgap="20">
+                        <FlowPane fx:id="foodList" alignment="TOP_CENTER" hgap="20" prefHeight="168.0" prefWidth="290.0" prefWrapLength="400" vgap="20">
                             <!-- Thẻ món 1 -->
                             <VBox alignment="CENTER" prefHeight="35" prefWidth="80" spacing="5" styleClass="food-card">
                                 <StackPane>
@@ -269,6 +269,81 @@
                                 </StackPane>
                                 <Label styleClass="food-name" text="Bún bò" />
                             </VBox>
+                     <VBox alignment="CENTER" layoutX="15.0" layoutY="10.0" prefHeight="35" prefWidth="80" spacing="5" styleClass="food-card">
+                        <children>
+                           <StackPane>
+                              <children>
+                                 <ImageView fitHeight="40" fitWidth="40" styleClass="food-image">
+                                    <image>
+                                       <Image url="@../IMG/avatar.png" />
+                                    </image>
+                                 </ImageView>
+                                 <Button styleClass="add-icon" text="+" StackPane.alignment="TOP_RIGHT" />
+                              </children>
+                           </StackPane>
+                           <Label styleClass="food-name" text="Bánh mì" />
+                        </children>
+                     </VBox>
+                     <VBox alignment="CENTER" layoutX="165.0" layoutY="110.0" prefHeight="35" prefWidth="80" spacing="5" styleClass="food-card">
+                        <children>
+                           <StackPane>
+                              <children>
+                                 <ImageView fitHeight="40" fitWidth="40" styleClass="food-image">
+                                    <image>
+                                       <Image url="@../IMG/avatar.png" />
+                                    </image>
+                                 </ImageView>
+                                 <Button styleClass="add-icon" text="+" StackPane.alignment="TOP_RIGHT" />
+                              </children>
+                           </StackPane>
+                           <Label styleClass="food-name" text="Bánh mì" />
+                        </children>
+                     </VBox>
+                     <VBox alignment="CENTER" layoutX="215.0" layoutY="110.0" prefHeight="35" prefWidth="80" spacing="5" styleClass="food-card">
+                        <children>
+                           <StackPane>
+                              <children>
+                                 <ImageView fitHeight="40" fitWidth="40" styleClass="food-image">
+                                    <image>
+                                       <Image url="@../IMG/avatar.png" />
+                                    </image>
+                                 </ImageView>
+                                 <Button styleClass="add-icon" text="+" StackPane.alignment="TOP_RIGHT" />
+                              </children>
+                           </StackPane>
+                           <Label styleClass="food-name" text="Bánh mì" />
+                        </children>
+                     </VBox>
+                     <VBox alignment="CENTER" layoutX="115.0" layoutY="210.0" prefHeight="35" prefWidth="80" spacing="5" styleClass="food-card">
+                        <children>
+                           <StackPane>
+                              <children>
+                                 <ImageView fitHeight="40" fitWidth="40" styleClass="food-image">
+                                    <image>
+                                       <Image url="@../IMG/avatar.png" />
+                                    </image>
+                                 </ImageView>
+                                 <Button styleClass="add-icon" text="+" StackPane.alignment="TOP_RIGHT" />
+                              </children>
+                           </StackPane>
+                           <Label styleClass="food-name" text="Bánh mì" />
+                        </children>
+                     </VBox>
+                     <VBox alignment="CENTER" layoutX="165.0" layoutY="210.0" prefHeight="35" prefWidth="80" spacing="5" styleClass="food-card">
+                        <children>
+                           <StackPane>
+                              <children>
+                                 <ImageView fitHeight="40" fitWidth="40" styleClass="food-image">
+                                    <image>
+                                       <Image url="@../IMG/avatar.png" />
+                                    </image>
+                                 </ImageView>
+                                 <Button styleClass="add-icon" text="+" StackPane.alignment="TOP_RIGHT" />
+                              </children>
+                           </StackPane>
+                           <Label styleClass="food-name" text="Bánh mì" />
+                        </children>
+                     </VBox>
                         </FlowPane>
                     </ScrollPane>
                 </VBox>
